Tests/StellaTests/Resources/printed-code/bad/ERROR_UNEXPECTED_REFERENCE/return_ref_from_non_reference_function.st
language core;

extend with #references;

fn main(n : Nat) -> Bool {
    return new(true)
}